--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,24 +46,29 @@ pool:
 # No trigger for this pipeline
 trigger: none
 
-stages:
-  - ${{ if eq(parameters.TEST_ENABLE_DEPLOY, true) }}:
-    - stage: Publish_files_test
-      jobs:
-        - job: publish_assets
-          steps:  
-            # 1. Publish GitHub content in PRODUCTION env 
-            # Uploading files from source path: 'D:\a\1\s\*' to storage account: 'myioslotstorageaccount2' in container: '$web'
-            # The copying is done from the root folder of the GitHub repository to the given 
-            # container blob in the specified storage account
-            #  $(System.DefaultWorkingDirectory)/dist/*
-            - task: AzureFileCopy@4
-              inputs:
-                SourcePath: '$(System.DefaultWorkingDirectory)/*'
-                azureSubscription: '$(PRODUCTION_AZURE_SUBSCRIPTION)'
-                Destination: 'AzureBlob'
-                storage: '$(PRODUCTION_STORAGE_ACCOUNT_NAME)'
-                ContainerName: '$(BLOB_CONTAINER_NAME)'
-                AdditionalArgumentsForBlobCopy: '--recursive --exclude-path "README.md;CODEOWNERS;yarn.lock;package.json;azure-pipelines.yml;definitions;src" --exclude-pattern ".*"'
-              displayName: Deploy to container blob      
+jobs:
+  - ${{ if eq(parameters.PRODUCTION_ENABLE_DEPLOY, true) }}:
+    - job: publish_assets_prod
+      steps:  
+        - task: AzureFileCopy@4
+          inputs:
+            SourcePath: '$(System.DefaultWorkingDirectory)/*'
+            azureSubscription: '$(PRODUCTION_AZURE_SUBSCRIPTION)'
+            Destination: 'AzureBlob'
+            storage: '$(PRODUCTION_STORAGE_ACCOUNT_NAME)'
+            ContainerName: '$(BLOB_CONTAINER_NAME)'
+            AdditionalArgumentsForBlobCopy: '--recursive --exclude-path "README.md;CODEOWNERS;yarn.lock;package.json;azure-pipelines.yml;definitions;src" --exclude-pattern ".*"'
+          displayName: Copy to container blob (prod)
 
+  - ${{ if eq(parameters.TEST_ENABLE_DEPLOY, true) }}:
+    - job: publish_assets_test
+      steps:  
+        - task: AzureFileCopy@4
+          inputs:
+            SourcePath: '$(System.DefaultWorkingDirectory)/*'
+            azureSubscription: '$(TEST_AZURE_SUBSCRIPTION)'
+            Destination: 'AzureBlob'
+            storage: '$(TEST_STORAGE_ACCOUNT_NAME)'
+            ContainerName: '$(BLOB_CONTAINER_NAME)'
+            AdditionalArgumentsForBlobCopy: '--recursive --exclude-path "README.md;CODEOWNERS;yarn.lock;package.json;azure-pipelines.yml;definitions;src" --exclude-pattern ".*"'
+          displayName: Copy to container blob (test)
