--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,9 +10,15 @@
 # future we could add the option to copy out the new files, update existing files 
 # and remove the ones that no longer exist (using AzCopy sync command). 
 #
-# The following parameters needs to be set to identify the environment for which
-# should be synchronized the content with the master branch of this repository:
-# - ENVIRONMENT: TEST | PRODUCTION
+# The following parameters needs to be set to identify the target environment where
+# copying the GitHub content for the specified branch (tipically master):
+# - PRODUCTION_ENABLE_DATA_COPY: true || false   (default is true)
+# - TEST_ENABLE_DATA_COPY:       true || false   (default is false)
+#
+# To enable the copying of data to the remote blob container, you first have to 
+# set the following pipeline variable to true, otherwise all jobs will be skipped 
+# regardless the environment:
+# - ENABLE_DATA_COPY = true
 #
 # The following pipeline variables have to be added and configured based on the
 # environment:
@@ -23,12 +29,12 @@
 # - TEST_STORAGE_ACCOUNT_NAME: storage account name for test only
 
 parameters:
-  - name: 'PRODUCTION_ENABLE_DEPLOY'
+  - name: 'PRODUCTION_ENABLE_DATA_COPY'
     displayName: 'Copy files in production environment'
     type: boolean
     default: true
 
-  - name: 'TEST_ENABLE_DEPLOY'
+  - name: 'TEST_ENABLE_DATA_COPY'
     displayName: 'Copy files in test environment'
     type: boolean
     default: false
@@ -41,12 +47,30 @@ variables:
 pool:
   vmImage: 'windows-2019'
 
-# No trigger for this pipeline
-trigger: none
+# This pipeline can be manually run on any branch or is automatically triggered  
+# in production whenever a push is made to the 'master' branch.
+trigger:
+  branches:
+    include:
+      - 'master'
 
 jobs:
-  - ${{ if eq(parameters.PRODUCTION_ENABLE_DEPLOY, true) }}:
+  - ${{ if eq(parameters.PRODUCTION_ENABLE_DATA_COPY, true) }}:
     - job: publish_assets_prod
+        conditions: 
+          and(
+            succeeded(),
+            and (
+              eq(variables['ENABLE_DATA_COPY'], true),
+              or(
+                and(
+                  eq(variables['Build.SourceBranch'], 'refs/heads/master'),
+                  ne(variables['Build.Reason'], 'Manual')
+                ),
+                eq(variables['Build.Reason'], 'Manual')
+              )
+            )
+          )
       steps:  
         - task: AzureFileCopy@4
           inputs:
@@ -58,8 +82,22 @@ jobs:
             AdditionalArgumentsForBlobCopy: '--recursive --exclude-path "README.md;CODEOWNERS;yarn.lock;package.json;azure-pipelines.yml;definitions;src;.circleci;.git"'
           displayName: Copy to container blob ($(PRODUCTION_STORAGE_ACCOUNT_NAME))
 
-  - ${{ if eq(parameters.TEST_ENABLE_DEPLOY, true) }}:
+  - ${{ if eq(parameters.TEST_ENABLE_DATA_COPY, true) }}:
     - job: publish_assets_test
+        conditions: 
+          and(
+            succeeded(),
+            and (
+              eq(variables['ENABLE_DATA_COPY'], true),
+              or(
+                and(
+                  eq(variables['Build.SourceBranch'], 'refs/heads/master'),
+                  ne(variables['Build.Reason'], 'Manual')
+                ),
+                eq(variables['Build.Reason'], 'Manual')
+              )
+            )
+          )
       steps:  
         - task: AzureFileCopy@4
           inputs:
