[skip CI] Opting out of PR validation in pipeline
By default, Pull request (PR) triggers cause a pipeline to run whenever a pull request is opened. The current pipeline does not have any job to be run when there is a PR (all jobs are skipped) so we can skip the whole pipeline execution.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,6 +55,7 @@ trigger:
   branches:
     include:
       - 'master'
+pr: none      
 
 jobs:
   - ${{ if eq(parameters.PRODUCTION_ENABLE_DATA_COPY, true) }}:
