--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,10 +44,15 @@ variables:
     value: '$web'
   - name: EXCLUDE_PATH
     value: 'README.md;CODEOWNERS;yarn.lock;package.json;azure-pipelines.yml;.node-version;.prettierrc;jest.config.js;tsconfig.json;tslint.json;definitions;src;.circleci;.git'
+  - name: NODE_VERSION
+    value: '8.11.3'
+  - name: YARN_CACHE_FOLDER
+    value: $(Pipeline.Workspace)/.yarn
 
-# Use Windows VM because the AzureFileCopy task is supported only on that OS
+# Linux is the preferred VM because jobs are run faster 
+# Use Windows VM only for publishing because the AzureFileCopy task is supported only on that OS
 pool:
-  vmImage: 'windows-2019'
+  vmImage: 'ubuntu-latest'
 
 # This pipeline can be manually run on any branch or is automatically triggered  
 # in production whenever a push is made to the 'master' branch.
@@ -55,59 +60,125 @@ trigger:
   branches:
     include:
       - 'master'
-pr: none      
 
-jobs:
-  - ${{ if eq(parameters.PRODUCTION_ENABLE_DATA_COPY, true) }}:
-    - job: publish_assets_prod
-      condition: 
-        and(
-          succeeded(),
-          and (
-            eq(variables['ENABLE_DATA_COPY'], true),
-            or(
-              and(
-                eq(variables['Build.SourceBranch'], 'refs/heads/master'),
-                ne(variables['Build.Reason'], 'Manual')
-              ),
-              eq(variables['Build.Reason'], 'Manual')
+stages:
+  # A) Build and code validation
+  - stage: Build
+    dependsOn: []
+    jobs:
+      # A1) Checkout, install module and build code
+      - job: make_build      
+        steps:
+        - template: azure-templates/make-build-steps.yml
+          parameters:
+            make: build
+            
+      # A2) Analyze source code to find errors with lint
+      - job: lint   
+        steps:
+        - template: azure-templates/make-build-steps.yml
+          parameters:
+            make: install_dependencies
+
+        - script: |
+            yarn lint
+          displayName: 'Lint'
+
+      # A4) Run Danger (skipping if not executing on a PR)
+      - job: danger
+        condition: 
+          and(
+            succeeded(), 
+            and(
+              eq(variables['Build.Reason'], 'PullRequest'),
+              ne(variables['DANGER_GITHUB_API_TOKEN'], 'skip')
             )
           )
-        )
-      steps:  
-        - task: AzureFileCopy@4
-          inputs:
-            SourcePath: '$(System.DefaultWorkingDirectory)/*'
-            azureSubscription: '$(PRODUCTION_AZURE_SUBSCRIPTION)'
-            Destination: 'AzureBlob'
-            storage: '$(PRODUCTION_STORAGE_ACCOUNT_NAME)'
-            ContainerName: '$(BLOB_CONTAINER_NAME)'
-            AdditionalArgumentsForBlobCopy: '--recursive --exclude-path "$(EXCLUDE_PATH)"'
-          displayName: Copy to container blob ($(PRODUCTION_STORAGE_ACCOUNT_NAME))
+        steps:
+          - template: azure-templates/make-build-steps.yml
+            parameters:
+              make: install_dependencies
 
-  - ${{ if eq(parameters.TEST_ENABLE_DATA_COPY, true) }}:
-    - job: publish_assets_test
-      condition: 
-        and(
-          succeeded(),
-          and (
-            eq(variables['ENABLE_DATA_COPY'], true),
-            or(
-              and(
-                eq(variables['Build.SourceBranch'], 'refs/heads/master'),
-                ne(variables['Build.Reason'], 'Manual')
-              ),
-              eq(variables['Build.Reason'], 'Manual')
+          - bash: |
+              yarn danger ci
+            env:
+              DANGER_GITHUB_API_TOKEN: '$(DANGER_GITHUB_API_TOKEN)'
+            displayName: 'Danger CI'
+
+  # B) Run unit tests if there is a push or pull request on any branch.
+  - stage: Test
+    dependsOn: []
+    jobs:
+      - job: unit_tests
+        steps:
+        - template: azure-templates/make-build-steps.yml
+          parameters:
+            make: install_dependencies
+
+        - script: |
+            yarn test:coverage
+          displayName: 'Unit tests exec'
+
+        - bash: |
+            bash <(curl -s https://codecov.io/bash)
+          displayName: 'Code coverage'
+
+  # C) Copy all data in this repository to the storage to make them available on CDN nodes
+  - stage: Publish
+    pool:
+      vmImage: 'windows-2019'
+    dependsOn: []
+    jobs:
+      - ${{ if eq(parameters.PRODUCTION_ENABLE_DATA_COPY, true) }}:
+        - job: publish_assets_prod
+          condition: 
+            and(
+              succeeded(),
+              and (
+                eq(variables['ENABLE_DATA_COPY'], true),
+                or(
+                  and(
+                    eq(variables['Build.SourceBranch'], 'refs/heads/master'),
+                    ne(variables['Build.Reason'], 'Manual')
+                  ),
+                  eq(variables['Build.Reason'], 'Manual')
+                )
+              )
             )
-          )
-        )
-      steps:  
-        - task: AzureFileCopy@4
-          inputs:
-            SourcePath: '$(System.DefaultWorkingDirectory)/*'
-            azureSubscription: '$(TEST_AZURE_SUBSCRIPTION)'
-            Destination: 'AzureBlob'
-            storage: '$(TEST_STORAGE_ACCOUNT_NAME)'
-            ContainerName: '$(BLOB_CONTAINER_NAME)'
-            AdditionalArgumentsForBlobCopy: '--recursive --exclude-path "$(EXCLUDE_PATH)"'
-          displayName: Copy to container blob ($(TEST_STORAGE_ACCOUNT_NAME))
+          steps:  
+            - task: AzureFileCopy@4
+              inputs:
+                SourcePath: '$(System.DefaultWorkingDirectory)/*'
+                azureSubscription: '$(PRODUCTION_AZURE_SUBSCRIPTION)'
+                Destination: 'AzureBlob'
+                storage: '$(PRODUCTION_STORAGE_ACCOUNT_NAME)'
+                ContainerName: '$(BLOB_CONTAINER_NAME)'
+                AdditionalArgumentsForBlobCopy: '--recursive --exclude-path "$(EXCLUDE_PATH)"'
+              displayName: Copy to container blob ($(PRODUCTION_STORAGE_ACCOUNT_NAME))
+
+      - ${{ if eq(parameters.TEST_ENABLE_DATA_COPY, true) }}:
+        - job: publish_assets_test
+          condition: 
+            and(
+              succeeded(),
+              and (
+                eq(variables['ENABLE_DATA_COPY'], true),
+                or(
+                  and(
+                    eq(variables['Build.SourceBranch'], 'refs/heads/master'),
+                    ne(variables['Build.Reason'], 'Manual')
+                  ),
+                  eq(variables['Build.Reason'], 'Manual')
+                )
+              )
+            )
+          steps:  
+            - task: AzureFileCopy@4
+              inputs:
+                SourcePath: '$(System.DefaultWorkingDirectory)/*'
+                azureSubscription: '$(TEST_AZURE_SUBSCRIPTION)'
+                Destination: 'AzureBlob'
+                storage: '$(TEST_STORAGE_ACCOUNT_NAME)'
+                ContainerName: '$(BLOB_CONTAINER_NAME)'
+                AdditionalArgumentsForBlobCopy: '--recursive --exclude-path "$(EXCLUDE_PATH)"'
+              displayName: Copy to container blob ($(TEST_STORAGE_ACCOUNT_NAME))
