--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,7 @@
-# Azure DevOps pipeline for validating and testing the tools implemented in this
-# repositories and for publishing the data to a CDN.
-#
-# The main goal of this pipeline is the uploading of the files from this repository 
-# to a container on Azure storage account that is served up via the static website 
-# support and fronted via an Azure CDN. 
-#
+# Azure DevOps pipeline for uploading files from this repository to a container 
+# on Azure storage account that is served up via the static website support and 
+# fronted via an Azure CDN. 
+# 
 # WARNING. The current implementation is based on DevOps AzureFileCopy task that  
 # copies the new files up to Azure Storage overwriting the existing ones but never 
 # removes the old files.
@@ -62,7 +59,7 @@ pool:
 trigger:
   branches:
     include:
-      - '*'
+      - 'master'
 
 stages:
   # A) Code validation
@@ -80,26 +77,8 @@ stages:
             yarn lint
           displayName: 'Lint'
 
-      # A2) Run Danger (skipping if not executing on a PR)
-      - job: danger
-        condition: 
-          and(
-            succeeded(), 
-            and(
-              eq(variables['Build.Reason'], 'PullRequest'),
-              ne(variables['DANGER_GITHUB_API_TOKEN'], 'skip')
-            )
-          )
-        steps:
-          - template: azure-templates/make-build-steps.yml
-            parameters:
-              make: install_dependencies
+      # A2) Run Danger (skipping if not executing on a PR): TO ADD in devDependencies 
 
-          - bash: |
-              yarn danger ci
-            env:
-              DANGER_GITHUB_API_TOKEN: '$(DANGER_GITHUB_API_TOKEN)'
-            displayName: 'Danger CI'
 
   # B) Run unit tests if there is a push or pull request on any branch.
   - stage: Test
@@ -115,30 +94,30 @@ stages:
             bash <(curl -s https://codecov.io/bash)
           displayName: 'Code coverage'
 
-  # C) Copy all data in this repository to the storage to make them available on CDN nodes
-  - stage: Publish
-    pool:
-      vmImage: 'windows-2019'
-    dependsOn:
-      - Validation
-      - Test
-    jobs:
-      - ${{ if eq(parameters.PRODUCTION_ENABLE_DATA_COPY, true) }}:
-        - job: publish_assets_prod
-          condition: 
-            and(
-              succeeded(),
-              and (
-                eq(variables['ENABLE_DATA_COPY'], true),
-                or(
-                  and(
-                    eq(variables['Build.SourceBranch'], 'refs/heads/master'),
-                    ne(variables['Build.Reason'], 'Manual')
-                  ),
-                  eq(variables['Build.Reason'], 'Manual')
-                )
-              )
+  # C) Copy data from this repository to the storage to make them available on CDN nodes in PROD
+  - ${{ if eq(parameters.PRODUCTION_ENABLE_DATA_COPY, true) }}:
+    - stage: Publish_production
+      condition: 
+        and(
+          succeeded(),
+          and (
+            eq(variables['ENABLE_DATA_COPY'], true),
+            or(
+              and(
+                eq(variables['Build.SourceBranch'], 'refs/heads/master'),
+                ne(variables['Build.Reason'], 'Manual')
+              ),
+              eq(variables['Build.Reason'], 'Manual')
             )
+          )
+        )
+      pool:
+        vmImage: 'windows-2019'
+      dependsOn:
+        - Validation
+        - Test
+      jobs:
+        - job: publish_assets_prod
           steps:  
             - task: AzureFileCopy@4
               inputs:
@@ -150,22 +129,28 @@ stages:
                 AdditionalArgumentsForBlobCopy: '--recursive --exclude-path "$(EXCLUDE_PATH)"'
               displayName: Copy to container blob ($(PRODUCTION_STORAGE_ACCOUNT_NAME))
 
-      - ${{ if eq(parameters.TEST_ENABLE_DATA_COPY, true) }}:
-        - job: publish_assets_test
-          condition: 
-            and(
-              succeeded(),
-              and (
-                eq(variables['ENABLE_DATA_COPY'], true),
-                or(
-                  and(
-                    eq(variables['Build.SourceBranch'], 'refs/heads/master'),
-                    ne(variables['Build.Reason'], 'Manual')
-                  ),
-                  eq(variables['Build.Reason'], 'Manual')
-                )
-              )
+  # D) Copy data from this repository to the storage to make them available on CDN nodes in PROD
+  - ${{ if eq(parameters.TEST_ENABLE_DATA_COPY, true) }}:
+    - stage: Publish_test
+      condition:
+        and(
+          succeeded(),
+          and (
+            eq(variables['ENABLE_DATA_COPY'], true),
+            or(
+              and(
+                eq(variables['Build.SourceBranch'], 'refs/heads/master'),
+                ne(variables['Build.Reason'], 'Manual')
+              ),
+              eq(variables['Build.Reason'], 'Manual')
             )
+          )
+        )
+      dependsOn:
+        - Validation
+        - Test
+      jobs:
+        - job: publish_assets_test
           steps:  
             - task: AzureFileCopy@4
               inputs:
